@startuml UDRMS Architecture

' ── Styling ──────────────────────────────────────────────────────────
skinparam class {
    BackgroundColor         #F8F9FA
    BorderColor             #374151
    ArrowColor              #374151
    AttributeFontColor      #6B7280
}
skinparam enum {
    BackgroundColor         #FFF3E0
    BorderColor             #F7931E
}
skinparam stereotype {
    CBackgroundColor        #FFF3E0
}

' ═══════════════════════════════════════════════════════════════════════
' ENUMS
' ═══════════════════════════════════════════════════════════════════════

enum AppState::Role {
    ADMIN
    STUDENT
}

enum Restaurant::day {
    Sunday
    Monday
    Tuesday
    Wednesday
    Thursday
    Friday
    Saturday
}

enum Restaurant::morningDish {
    CoffeeMilk_and_Croissant
    Yogurt_and_ChocolateBread
    Tea_and_ChocolateBar
}

enum Restaurant::dish {
    Couscous
    Rechta
    Spaghetti
    Sardines
    Chorba
    Lentil_Soup
    Chakhchoukha
    Loubia
    Rice
    Tajjine
    Tlitli
    Mtewem
    Jwaz
    Fried_Chicken
}

' ═══════════════════════════════════════════════════════════════════════
' STRUCTS
' ═══════════════════════════════════════════════════════════════════════

struct Restaurant::dailyMenu {
    breakfast : morningDish
    lunch     : dish
    dinner    : dish
}

struct ActivityLog {
    timestamp   : QDateTime
    action      : QString
    description : QString
}

struct Complaint {
    id          : int
    studentId   : int
    studentName : QString
    dateTime    : QDateTime
    category    : QString
    description : QString
    status      : QString
    adminReply  : QString
}

' ═══════════════════════════════════════════════════════════════════════
' DOMAIN CLASSES
' ═══════════════════════════════════════════════════════════════════════

class Student {
    - id           : int
    - firstName    : string
    - familyName   : string
    - email        : string
    - phoneNumber  : string
    - gender       : string
    - academicYear : int
    - idCount      : static int
    ..
    + getters / setters for all fields
    + verifyInput(first, family, email, phone, gender, year) bool
    + isInitialized() bool
    + setStudent(...) bool
    + setIdCount(highestID) static void
    + getIdCount() static int
}

class Room {
    - floor     : int
    - number    : int
    - residents : vector~Student~
    - capacity  : static int
    ..
    + getFloor() int
    + getNumber() int
    + getResidents() vector~Student~
    + getCapacity() static int
    + getCurrentOccupancy() int
    + setCapacity(cap) static void
    + isFull() bool
    + isOccupied() bool
    + isStudentIn(id) bool
    + addResident(student) bool
    + removeResident(id) bool
    + clearResidents() void
    + findResidentById(id) Student*
}

class Block {
    - name  : string
    - rooms : vector~vector~Room~~
    ..
    + getName() string
    + getRoom(floor, number) Room*
    + getRoomsByFloor(floor) vector~Room~*
    + getAvailableRooms() vector~Room~*
    + getFullRooms() vector~Room~*
    + getTotalOccupancy() int
    + findRoomByStudentID(id) Room*
    + isStudentIn(id) bool
    + isFull() bool
}

class Dormitory {
    - number     : int
    - blocks     : vector~Block~
    - restaurant : Restaurant
    ..
    + getNumber() int
    + getBlocks() vector~Block~
    + getBlock(name) Block*
    + getRestaurant() Restaurant&
    + getTotalOccupancy() int
    + getOccupancyRate() double
    + getTotalCapacity() int
    + getAvailableRooms() vector~Room~*
    + getFullRooms() vector~Room~*
    + getRoomsByFloor(floor) vector~Room~*
    + getAllAssignedStudents() vector~Student~
    + findStudentsByName(name) vector~Student~
    + filterStudentsByYear(year) vector~Student~
    + isFull() bool
    + isStudentIn(id) bool
    + assignStudentToRoom(block, floor, room, student) bool
    + unassignStudent(id) bool
    + moveStudent(id, dstBlock, dstFloor, dstRoom) bool
    + updateStudent(id, updated) bool
    + findRoomByStudentID(id) Room*
    + findStudentLocation(id) string
    + addStudent(student) bool
    + canAssignStudent(block, room, id) bool
    + swapStudents(id1, id2) bool
}

class Restaurant {
    - weeklyMenu      : dailyMenu[7]
    - ateBreakfast    : vector~int~
    - ateLunch        : vector~int~
    - ateDinner       : vector~int~
    - BREAKFAST_OPEN  : static int
    - BREAKFAST_CLOSE : static int
    - LUNCH_OPEN      : static int
    - LUNCH_CLOSE     : static int
    - DINNER_OPEN     : static int
    - DINNER_CLOSE    : static int
    ..
    + getDailyMenu(day) dailyMenu
    + getWeeklyMenu() dailyMenu*
    + setDailyMenu(day, breakfast, lunch, dinner) void
    + setWeeklyMenu(sun, mon, tue, wed, thu, fri, sat) void
    + recordBreakfast(studentId, hour) bool
    + recordLunch(studentId, hour) bool
    + recordDinner(studentId, hour) bool
    + didStudentEatBreakfast(id) bool
    + didStudentEatLunch(id) bool
    + didStudentEatDinner(id) bool
    + resetDailyMeals() void
    + isOpen(hour) bool
    + getDishName(dish) static string
    + getMorningDishName(morningDish) static string
    + getDayName(day) static string
    + hours getters/setters (static)
}

class University {
    - name        : string
    - dormitories : vector~Dormitory~
    - studentPool : vector~Student~
    ..
    + getName() string
    + getDormitories() vector~Dormitory~
    + getDormitory(number) Dormitory*
    + getStudentPool() vector~Student~
    + addDormitory(dorm) bool
    + removeDormitory(number) bool
    + enrollStudent(student) bool
    + removeFromPool(id) bool
    + assignStudentToDormitory(id, dorm) bool
    + unassignStudent(id) bool
    + expelStudent(id) bool
    + locateStudent(id) string
    + isEmailDuplicate(email) bool
    + isPhoneDuplicate(phone) bool
    + getTotalCapacity() int
    + saveData(filename) bool
    + loadData(filename) bool
}

' ═══════════════════════════════════════════════════════════════════════
' APPLICATION STATE
' ═══════════════════════════════════════════════════════════════════════

class AppState {
    - university: University
    ..
    + role                : Role
    + currentStudentId    : int
    + activityLog         : QVector~ActivityLog~
    + complaints          : QVector~Complaint~
    + complaintIdCounter   : int
    ..
    + instance() AppState&
    + logActivity(action, desc) void
    + findStudentById(id) const Student*
    + findStudentDorm(id) Dormitory*
    + allStudents() QVector~Student~
    + updateStudentData(id, fn, ln, email, phone, gender, year) bool
    + assignStudentToRoom(studentId, dorm, block, floor, room) bool
}

' ═══════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ═══════════════════════════════════════════════════════════════════════

University          *-- Dormitory  : contains
Dormitory           *-- Block      : contains
Block               *-- Room       : grid of
Room                o-- Student    : houses 0..capacity
Dormitory           *-- Restaurant : has
University           o-- Student   : pool
Restaurant          *-- dailyMenu  : weeklyMenu[7]
AppState            *-- University : singleton owns
AppState             o-- Complaint : manages
AppState             o-- ActivityLog : tracks

Restaurant::day           <.. Restaurant : uses
Restaurant::morningDish   <.. Restaurant::dailyMenu : breakfast
Restaurant::dish          <.. Restaurant::dailyMenu : lunch/dinner
AppState::Role            <.. AppState

@enduml
